# id-sast-python

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: __init__.py  app.py  schemas.py  server.py
cli/: __init__.py  main.py  scanner.py
config/: settings.py
core/: __init__.py
core/ai/: gemini_client.py  prompt_builder.py  rule_generator.py
core/analyzers/: hardcoded_secret_analyzer.py  pattern_matcher.py  semantic_analyzer.py  taint_analyzer.py  vulnerability_classifier.py
core/graph/: graph_model.py  graph_serializer.py  subgraph_matcher.py
core/parsers/: ast_parser.py  cfg_builder.py  dfg_builder.py  normalizer.py
core/rules/: built_in_rules.py  sanitizers.py  sinks.py  sources.py
database/: __init__.py  analysis_repository.py  mongodb.py  rule_repository.py  scan_repository.py
docs/diagrams/: .$id-sast-python-architecture.drawio.bkp  id-sast-python-architecture.drawio
engine/: __init__.py  pysast.py
reports/: console_report.py  html_report.py  json_report.py
samples/vulnerable/command_injection/: dangerous_exec.py  os_system.py  (+2 more)
service/: __init__.py  scan_service.py
tests/: run_thesis_benchmarks.py  test_api.py  test_ast_parser.py  test_built_in_rules.py  test_dfg_builder.py  test_graph_model.py  test_normalizer.py  test_pattern_matcher.py  test_pipeline.py  test_sanitizers.py  test_semantic_analyzer.py  test_sinks.py  test_sources.py  test_subgraph_matcher.py  test_taint_analyzer.py  test_thesis_benchmarks.py  test_vulnerability_classifier.py
(+39 files in other folders)
